--- a/source/scss/_blocks/container.scss
+++ b/source/scss/_blocks/container.scss
@@ -1,4 +1,10 @@
 .container {
   max-width: 1180px;
   margin: 0 auto;
+  @media (max-width: $media-tablet) {
+    max-width: 648px;
+  }
+  @media (max-width: $media-mobile) {
+    max-width: 335px;
+  }
 }
