--- a/source/scss/catalog.scss
+++ b/source/scss/catalog.scss
@@ -1,6 +1,14 @@
 .category {
   margin-top: 60px;
   margin-bottom: 55px;
+  @media (max-width: $media-tablet) {
+    margin-top: 70px;
+    margin-bottom: 40px;
+  }
+  @media (max-width: $media-mobile) {
+    margin-top: 46px;
+    margin-bottom: 30px;
+  }
   &__title {
     font-family: 'Montserrat', sant-serif;
     font-style: normal;
@@ -10,16 +18,36 @@
     line-height: 49px;
     text-transform: uppercase;
     margin: 0 auto;
+    @media (max-width: $media-tablet) {
+      font-size: 36px;
+      line-height: 44px;
+    }
+    @media (max-width: $media-mobile) {
+      font-size: 24px;
+      line-height: 29px;
+    }
   }
   &__list {
     display: flex;
-    align-items: flex-start;
     flex-flow: row wrap;
     column-gap: 20px;
     row-gap: 23px;
     &--empty {
-  width: 180px;
-}
+      width: 180px;
+      @media (max-width: 1080px) {
+        display: none;
+      }
+    }
+    @media (max-width: 1080px) {
+      justify-content: center;
+    }
+    @media (max-width: $media-tablet) {
+      row-gap: 20px;
+    }
+    @media (max-width: $media-mobile) {
+      column-gap: 16px;
+      row-gap: 16px;
+    }
   }
 }
   
@@ -27,14 +55,29 @@
   padding-left: 200px;
   padding-right: 300px;
   margin-bottom: 55px;
+  @media (max-width: $media-tablet) {
+    padding-left: 0;
+    padding-right: 0;
+    margin-bottom: 50px;
+  }
   &__title {
-    font-family: 'Montserrat', sant-serif;
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     font-weight: 700;
     color: #1E0606; 
     font-size: 38px;
     line-height: 46px;
     padding-bottom: 10px;
+    @media (max-width: $media-tablet) {
+      font-size: 36px;
+      line-height: 44px;
+      padding-bottom: 5px;
+    }
+    @media (max-width: $media-mobile) {
+      font-size: 24px;
+      line-height: 29px;
+      padding-bottom: 0px;
+    }
   }
   &__text {
     font-family: 'Open Sans', sans-serif;
@@ -44,5 +87,9 @@
     line-height: 22px;
     color: #1E0606;
     padding-top: 15px;
+    @media (max-width: $media-tablet) {
+      font-size: 16px;
+      line-height: 22px;
+    }
   }
 }
