--- a/source/views/blocks/product-list.html
+++ b/source/views/blocks/product-list.html
@@ -1,1 +1,1 @@
-<li class="products__list-item @@img undotted"><a class="products__link @@link" href="@@href">@@name</a></li>
+<li class="products__list-item @@list @@img undotted"><a class="@@link @@link-item" href="@@href">@@name</a></li>
