--- a/source/views/blocks/socialnetwork.html
+++ b/source/views/blocks/socialnetwork.html
@@ -1,1 +1,1 @@
-<li class="socialnetwork__link-item"><a class="socialnetwork__link" href="@@link"><img src="@@img" alt="@@alt" width="@@width" height="@@height"></a></li>
+<li class="socialnetwork__link-item"><a class="socialnetwork__link" href="@@link"><img class="socialnetwork__img" src="@@img" alt="@@alt" width="@@width" height="@@height"></a></li>
