--- a/source/scss/_blocks/product-list.scss
+++ b/source/scss/_blocks/product-list.scss
@@ -6,77 +6,278 @@
     height: 270px;
     &__one {
       background-image: url(../img/categoryOne.jpeg);    
-      background-color: #DBE4DB;    
+      background-color: #DBE4DB;   
+      @media (max-width: $media-tablet) {
+        background-size: 244px 227px;
+      }
     }  
     &__two {
       background-image: url(../img/categoryTwo.png);
       background-color: #EADDD3;
+      @media (max-width: $media-tablet) {
+        background-size: 192px 225px;
+      }
+      @media (max-width: $media-mobile) {
+        display: none;
+      }
     }
     &__three {
       background-image: url(../img/categoryThree.png);
       background-color: #F8F2DA;
+      @media (max-width: $media-tablet) {
+        background-size: 192px 225px;
+      }
     }
     &__four {
       background-image: url(../img/categoryFour.png);
       background-color: #D5D4E1;
+      @media (max-width: $media-tablet) {
+        display: none;
+      }
     }
-    &__five {
+    &__catalog-one {
+      background-image: url(../img/categoryOne.jpeg);    
+      background-color: #DBE4DB;   
+      @media (max-width: $media-tablet) {
+        background-size: 177px 178px;
+      }
+      @media (max-width: $media-mobile) {
+        background-size: 139px 139px;
+      }
+    }  
+    &__catalog-two {
+      background-image: url(../img/categoryTwo.png);
+      background-color: #EADDD3;
+      @media (max-width: $media-tablet) {
+        background-size: 150px 177px;
+      }
+      @media (max-width: $media-mobile) {
+        background-size: 118px 140px;
+      }
+    }
+    &__catalog-three {
+      background-image: url(../img/categoryThree.png);
+      background-color: #F8F2DA;
+      @media (max-width: $media-tablet) {
+        background-size: 196px 196px;
+      }
+      @media (max-width: $media-mobile) {
+        background-size: 154px 154px;
+      }
+    }
+    &__catalog-four {
+      background-image: url(../img/categoryFour.png);
+      background-color: #D5D4E1;
+      @media (max-width: $media-tablet) {
+        background-size: 176px 183px;
+      }
+      @media (max-width: $media-mobile) {
+        background-size: 138px 144px;
+      }
+    }
+    &__catalog-five {
       background-image: url(../img/categoryFive.jpeg);
       background-color: #F3D0DB;
+      @media (max-width: $media-tablet) {
+        background-size: 181px 181px;
+      }
+      @media (max-width: $media-mobile) {
+        background-size: 143px 143px;
+      }
     }
-    &__six {
+    &__catalog-six {
       background-image: url(../img/categorySix.jpeg);
       background-color: #E5EAF8;
+      @media (max-width: $media-tablet) {
+        background-size: 198px 149px;
+      }
+      @media (max-width: $media-mobile) {
+        background-size: 156px 118px;
+      }
     }
 }
+
+.products__main {
+  @media (max-width: $media-tablet) {
+    width: 259px;
+    height: 249px;
+  }
+  @media (max-width: $media-mobile) {
+    width: 247px;
+    height: 238px;
+  }
+}
+
+.products__catalog {
+  @media (max-width: $media-tablet) {
+    width: 202px;
+    height: 196px;
+  }
+  @media (max-width: $media-mobile) {
+    width: 159px;
+    height: 155px;
+  }
+}
     
-.products__link {
-    font-family: 'Montserrat', sans-serif;
-    font-style: normal;
-    font-weight: 700;
+.products__link-catalog {
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 32px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  text-shadow: 0px 0px 40px rgba(147, 3, 3, 0.25);
+  @media (max-width: $media-tablet) {
+    font-size: 24px;
+    line-height: 29px;
+  }
+  @media (max-width: $media-mobile) {
+    font-size: 18px;
+    line-height: 22px;
+  }
+  &__apparel {
+    position: absolute;
+    top: 104px;
+    left: 48px;
+    width: 66%;
+    @media (max-width: $media-tablet) {
+      top: 77px;
+      left: 44px;
+    }
+    @media (max-width: $media-mobile) {
+      top: 60px;
+      left: 34px;
+    }
+  }
+  &__holiday {
+    position: absolute;
+    top: 104px;
+    left: 48px;
+    width: 66%;
+    @media (max-width: $media-tablet) {
+      top: 76px;
+      left: 36px;
+    }
+    @media (max-width: $media-mobile) {
+      top: 60px;
+      left: 28px;
+    }
+  }
+  &__toys {
+    position: absolute;
+    top: 120px;
+    left: 105px;
+    @media (max-width: $media-tablet) {
+      top: 88px;
+      left: 70px;
+    }
+    @media (max-width: $media-mobile) {
+      top: 70px;
+      left: 57px;
+    }
+  }
+  &__accessories {
+    position: absolute;
+    top: 120px;
+    left: 45px;
+    @media (max-width: $media-tablet) {
+      top: 86px;
+      left: 14px;
+    }
+    @media (max-width: $media-mobile) {
+      top: 68px;
+      left: 12px;
+    }
+  }
+  &__sale {
+    position: absolute;
+    top: 119px;
+    left: 105px;
+    @media (max-width: $media-tablet) {
+      top: 87px;
+      left: 72px;
+    }
+    @media (max-width: $media-mobile) {
+      top: 69px;
+      left: 54px;
+    }
+  }
+  &__adults {
+    position: absolute;
+    top: 103px;
+    left: 44px;
+    width: 66%;
+    @media (max-width: $media-tablet) {
+      top: 76px;
+      left: 30px;
+    }
+    @media (max-width: $media-mobile) {
+      top: 60px;
+      left: 25px;
+    }
+  }
+  &:hover {
+    text-decoration: underline;
+  }
+  &:active {
+    text-decoration: underline;
+  }
+}
+
+.products__link-main {
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 32px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  text-shadow: 0px 0px 40px rgba(147, 3, 3, 0.25);
+  @media (max-width: $media-tablet) {
     font-size: 26px;
     line-height: 32px;
-    text-align: center;
-    text-transform: uppercase;
-    color: #FFFFFF;
-    text-shadow: 0px 0px 40px rgba(147, 3, 3, 0.25);
-    &__apparel {
-      position: absolute;
-      top: 104px;
+  }
+  &__apparel {
+    position: absolute;
+    top: 104px;
+    left: 48px;
+    width: 66%;
+    @media (max-width: $media-tablet) {
+      top: 95px;
       left: 48px;
-      width: 66%;
     }
-    &__holiday {
-      position: absolute;
-      top: 104px;
-      left: 48px;
-      width: 66%;
+    @media (max-width: $media-mobile) {
+      top: 90px;
+      left: 46px;
     }
-    &__toys {
-      position: absolute;
-      top: 120px;
-      left: 105px;
-    }
-    &__accessories {
-      position: absolute;
-      top: 120px;
+  }
+  &__holiday {
+    position: absolute;
+    top: 104px;
+    left: 48px;
+    width: 66%;
+    @media (max-width: $media-tablet) {
+      top: 95px;
       left: 45px;
     }
-    &__sale {
-      position: absolute;
-      top: 119px;
-      left: 105px;
-    }
-    &__adults {
-      position: absolute;
-      top: 103px;
-      left: 44px;
-      width: 66%;
-    }
-    &:hover {
-      text-decoration: underline;
-    }
-    &:active {
-      text-decoration: underline;
-    }
+  }
+  &__toys {
+    position: absolute;
+    top: 120px;
+    left: 105px;
+  }
+  &__accessories {
+    position: absolute;
+    top: 120px;
+    left: 45px;
+  }
+  &:hover {
+    text-decoration: underline;
+  }
+  &:active {
+    text-decoration: underline;
+  }
 }
