--- a/source/scss/_blocks/socialnetwork.scss
+++ b/source/scss/_blocks/socialnetwork.scss
@@ -3,5 +3,51 @@
     justify-content: space-between;
     align-items: center;
     list-style-type: none;
+    @media (max-width: $media-tablet) {
+      column-gap: 70px;
+    }
+    @media (max-width: $media-mobile) {
+      flex-wrap: wrap;
+      row-gap: 31px;
+      column-gap: 37px;
+      margin-left: 5px;
+      margin-right: 8px;
+    }
   }
+
+.socialnetwork__img {
+  @media (max-width: $media-tablet) {
+    object-fit: contain;
+  }
+}
+
+.socialnetwork__link-item:nth-of-type(1) {
+  @media (max-width: $media-mobile) {
+    order: 3;
+    width: 131px;
+    height: 42px;
+    margin-left: 9px;
+  }
+}
+.socialnetwork__link-item:nth-of-type(2) {
+  @media (max-width: $media-mobile) {
+    order: 2;
+    width: 109px;
+    height: 38px;
+  }
+}
+.socialnetwork__link-item:nth-of-type(3) {
+  @media (max-width: $media-mobile) {
+    order: 1;
+    width: 149px;
+    height: 32px;
+  }
+}
+.socialnetwork__link-item:nth-of-type(4) {
+  @media (max-width: $media-mobile) {
+    order: 4;
+    width: 143px;
+    height: 26px;
+  }
+}
   
