--- a/source/scss/_variables.base.scss
+++ b/source/scss/_variables.base.scss
@@ -19,6 +19,7 @@ $font-base-family: $font-serif-family;
 $media-tablet: 768px;
 $media-tablet-landscape: 1024px;
 $media-desktop: 1200px;
+$media-mobile: 375px;
 
 /*
 * Colors
