--- a/source/scss/animation.scss
+++ b/source/scss/animation.scss
@@ -1,5 +1,12 @@
 .animation {
     margin-top: 60px;
+    overflow: hidden;
+    @media (max-width: $media-tablet) {
+        margin-top: 70px;
+    }
+    @media (max-width: $media-mobile) {
+        margin-top: 46px;
+    }
     &__title {
         font-family: 'Montserrat', sans-serif;
         font-style: normal;
@@ -8,6 +15,10 @@
         line-height: 44px;
         text-transform: uppercase;
         color: #1E0606;
+        @media (max-width: $media-mobile) {
+            font-size: 24px;
+            line-height: 29px;
+        }
     }
 }
 
@@ -16,16 +27,35 @@
 }
 
 .animation__cloud {
+    position: relative;
     width: 1400px;
     height: 138px;
     margin: 0 auto;
-    position: relative;
+    animation: cloud 30s linear forwards;
+    animation-iteration-count: infinite;
+    @media (max-width: $media-tablet) {
+        height: 80px;
+        width: 768px;
+    }
+    @media (max-width: $media-mobile) {
+        width: 375px;
+    }
+} 
+
+@keyframes cloud {
+    100% {
+        transform: translateX(100%);
+    }
 }
 
-.animation__cloud {
-    animation: cloud 60s linear forwards;
-    animation-iteration-count: infinite;
-}  
+.animation__img {
+    @media (max-width: $media-tablet) {
+        transform: scale(0.549);
+    }
+    @media (max-width: $media-mobile) {
+        transform: scale(0.25);
+    }
+}
 
 .animation__cloud-one {
     background-image: url('../img/animation/cloud-one.png');
@@ -34,15 +64,14 @@
     width: 92px;
     height: 27px;
     position: absolute;
-    left: 80px;
-    top: 12px;
-    animation: animation__cloud linear 20s forwards;
-    animation-iteration-count: infinite;
-}
-
-@keyframes cloud {
-    100% {
-        transform: translateX(100%);
+    left: 5.8%;
+    top: 9%;
+    @media (max-width: $media-tablet) {
+        left: 3.7%;
+        top: 1%;
+    }
+    @media (max-width: $media-mobile) {
+       
     }
 }
 
@@ -53,8 +82,15 @@
     width: 187px;
     height: 40px;
     position: absolute;
-    left: 355px;
-    top: 46px;
+    left: 25.3%;
+    top: 33%;
+    @media (max-width: $media-tablet) {
+        left: 20.5%;
+        top: 11%;
+    }
+    @media (max-width: $media-mobile) {
+       
+    }
 }
 
 .animation__cloud-three {
@@ -64,8 +100,15 @@
     width: 157px;
     height: 33px;
     position: absolute;
-    left: 612px;
-    top: 10px;
+    left: 43.7%;
+    top: 6%;
+    @media (max-width: $media-tablet) {
+        left: 40%;
+        top: 1%;
+    }
+    @media (max-width: $media-mobile) {
+       
+    }
 }
 
 .animation__cloud-four {
@@ -75,8 +118,15 @@
     width: 202px;
     height: 42px;
     position: absolute;
-    left: 727px;
-    top: 92px;    
+    left: 51.8%;
+    top: 66%;    
+    @media (max-width: $media-tablet) {
+        left: 46%;
+        top: 35%;
+    }
+    @media (max-width: $media-mobile) {
+       
+    }
 }
 
 .animation__cloud-five {
@@ -86,8 +136,15 @@
     width: 93px;
     height: 27px;
     position: absolute;
-    right: 289px;
-    top: 46px;
+    right: 20.5%;
+    top: 32%;
+    @media (max-width: $media-tablet) {
+        right: 18%;
+        top: 11%;
+    }
+    @media (max-width: $media-mobile) {
+       
+    }
 }
 
 .animation__cloud-six {
@@ -97,8 +154,15 @@
     width: 165px;
     height: 35px;
     position: absolute;
-    top: 43px;
-    right: -22px;
+    top: 30%;
+    right: -1.6%;
+    @media (max-width: $media-tablet) {
+        right: -7%;
+        top: 9.5%;
+    }
+    @media (max-width: $media-mobile) {
+       
+    }
 }
 
 .animation__sun {
@@ -109,7 +173,14 @@
     height: 59px;
     position: absolute;
     top: 0;
-    right: 172px;
+    right: 12.5%;
+    @media (max-width: $media-tablet) {
+        right: 11%;
+        top: -8%;
+    }
+    @media (max-width: $media-mobile) {
+       
+    }
 }
 
 .animation__town {
@@ -117,24 +188,42 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    max-width: 1400px;
+    overflow: hidden;
+    width: 74%;
     height: 630px;
     margin: 0 auto;
     position: relative;
     margin-bottom: 69px;
+    @media (max-width: $media-tablet) {
+        width: 100%;
+        background-size: 113% 100%;
+        height: 384px;
+    }
+    @media (max-width: $media-mobile) {
+        height: 182px;
+    }
 }
 
 .animation__cars {
     animation: cars 20s linear;
     animation-iteration-count: infinite;
+    @media (max-width: $media-tablet) {
+        animation: cars-media-tablet 20s linear;
+        transform: scale(0.549);
+    }
 }
 
-@keyframes cars {
-    100% {
-        transform: translateX(100%);
-    }
-    
-}
+// @keyframes cars-media-tablet {
+//     100% {
+//         transform: scale(0.549) translateX(100%);
+//     }
+// }
+
+// @keyframes cars {
+//     100% {
+//         transform: translateX(100%);
+//     }
+// }
 
 .animation__car-one {
     background: url('../img/animation/Car-one.png');
@@ -143,8 +232,18 @@
     width: 251px;
     height: 100px;
     position: absolute;
-    top: 290px;
-    left: -56px;
+    top: 46%;
+    left: -4%;
+    @media (max-width: $media-tablet) {
+        transform: scale(0.549);
+        top: 47.3%;
+        left: -9%;
+    }
+    @media (max-width: $media-mobile) {
+        transform: scale(0.25);
+        top: 290px;
+        left: -56px;
+    }
 }
 
 .animation__car-two {
@@ -154,8 +253,18 @@
     width: 205px;
     height: 97px;
     position: absolute;
-    top: 288px;
-    left: 327px;
+    top: 45.5%;
+    left: 23.2%;
+    @media (max-width: $media-tablet) {
+        transform: scale(0.549);
+        top: 47.3%;
+        left: 19%;
+    }
+    @media (max-width: $media-mobile) {
+        transform: scale(0.25);
+        top: 290px;
+        left: -56px;
+    }
 }
 
 .animation__car-three {
@@ -165,8 +274,18 @@
     width: 247px;
     height: 66px;
     position: absolute;
-    top: 304px;
-    left: 625px;
+    top: 48.2%;
+    left: 44.8%;
+    @media (max-width: $media-tablet) {
+        transform: scale(0.549);
+        top: 51.5%;
+        left: 39%;
+    }
+    @media (max-width: $media-mobile) {
+        transform: scale(0.25);
+        top: 290px;
+        left: -56px;
+    }
 }
 
 .animation__car-four {
@@ -176,8 +295,18 @@
     width: 269px;
     height: 127px;
     position: absolute;
-    top: 274px;
-    right: -45px;
+    top: 43.5%;
+    right: -3%;
+    @media (max-width: $media-tablet) {
+        transform: scale(0.549);
+        top: 42.5%;
+        right: -11%;
+    }
+    @media (max-width: $media-mobile) {
+        transform: scale(0.25);
+        top: 290px;
+        right: -3%;
+    }
 }
 
 .animation__lantern-left {
@@ -187,8 +316,18 @@
     width: 151px;
     height: 396px;
     position: absolute;
-    top: 34px;
-    left: 435px;
+    top: 5.5%;
+    left: 31%;
+    @media (max-width: $media-tablet) {
+        transform: scale(0.549);
+        top: -6%;
+        left: 28.5%;
+    }
+    @media (max-width: $media-mobile) {
+        transform: scale(0.25);
+        top: 290px;
+        right: -3%;
+    }
 }
 
 .animation__lantern-right {
@@ -198,8 +337,18 @@
     width: 151px;
     height: 396px;
     position: absolute;
-    top: 34px;
-    right: -59px;
+    top: 5.5%;
+    right: -4.1%;
+    @media (max-width: $media-tablet) {
+        transform: scale(0.549);
+        top: -6%;
+        right: -9%;
+    }
+    @media (max-width: $media-mobile) {
+        transform: scale(0.25);
+        top: 290px;
+        right: -3%;
+    }
 }
 
 .animation__taxi {
@@ -209,10 +358,22 @@
     width: 887px;
     height: 267px;
     position: absolute;
-    top: 264px;
-    right: -42px;
+    top: 42%;
+    right: -3%;
     opacity: 0;
+    transform: translateX(0px);
     animation: taxi 7s linear 5s;
+    @media (max-width: $media-tablet) {
+        animation: taxi-media-tablet 7s linear 5s;
+        transform: scale(0.549);
+        top: 32.5%;
+        right: -29%;
+    }
+    @media (max-width: $media-mobile) {
+        transform: scale(0.25);
+        top: 290px;
+        right: -3%;
+    }
 }
 
 @keyframes taxi {
@@ -230,6 +391,21 @@
     }
 }
 
+@keyframes taxi-media-tablet {
+    0% {
+        opacity: 1;
+        transform: scale(0.549) translateX(0px);
+    }
+    50% {
+        opacity: 1;
+        transform: scale(0.549) translateX(-40px);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(0.549) translateX(-1400px);    
+    }
+}
+
 .animation__message-taxi {
     background: url('../img/animation/Message-taxi.png');
     background-repeat: no-repeat;
@@ -237,10 +413,20 @@
     width: 169px;
     height: 108px;
     position: absolute;
-    top: 209px;
-    right: 363px;
+    top: 33%;
+    right: 26%;
     opacity: 0;
     animation: message-taxi 2s ease 8s;
+    @media (max-width: $media-tablet) {
+        transform: scale(0.549);
+        top: 34%;
+        right: 21%;
+    }
+    @media (max-width: $media-mobile) {
+        transform: scale(0.25);
+        top: 290px;
+        right: -3%;
+    }
 }
 
 @keyframes message-taxi {
@@ -259,8 +445,18 @@
     width: 98px;
     height: 268px;
     position: absolute;
-    top: 319px;
-    left: 183px;
+    top: 50.5%;
+    left: 13%;
+    @media (max-width: $media-tablet) {
+        transform: scale(0.549);
+        top: 40%;
+        left: 12%;
+    }
+    @media (max-width: $media-mobile) {
+        transform: scale(0.25);
+        top: 290px;
+        right: -3%;
+    }
 }
 
 .animation__woman-arm {
@@ -270,11 +466,22 @@
     width: 64px;
     height: 45px;
     position: absolute;
-    top: 431px;
-    left: 209px; 
+    top: 68.2%;
+    left: 15%; 
     transform: rotate(0deg);
     transform-origin: 9px top;
     animation: woman-arm 2s ease 3s;
+    @media (max-width: $media-tablet) {
+        animation: woman-arm-media-tablet 2s ease 3s;
+        transform: scale(0.549);
+        top: 71%;
+        left: 15.5%;
+    }
+    @media (max-width: $media-mobile) {
+        transform: scale(0.25);
+        top: 290px;
+        right: -3%;
+    }
 }
 
 @keyframes woman-arm {
@@ -289,6 +496,18 @@
     }
 }
 
+@keyframes woman-arm-media-tablet {
+    0% {
+        transform: scale(0.549) rotate(0deg);
+    }
+    50% {
+        transform: scale(0.549) rotate(-45deg);
+    }
+    100% {
+        transform: scale(0.549) rotate(0deg);
+    }
+}
+
 .animation__woman-message {
     background: url('../img/animation/Messag-woman.png');
     background-repeat: no-repeat;
@@ -296,10 +515,20 @@
     width: 169px;
     height: 108px;
     position: absolute;
-    top: 213px;
-    left: 89px;
+    top: 34%;
+    left: 6.5%;
     opacity: 0;
     animation: woman-message 2s ease 3s;
+    @media (max-width: $media-tablet) {
+        transform: scale(0.549);
+        top: 34%;
+        left: 3%;
+    }
+    @media (max-width: $media-mobile) {
+        transform: scale(0.25);
+        top: 290px;
+        right: -3%;
+    }
 }
 
 .animation__suitcases {
@@ -309,9 +538,19 @@
     width: 192px;
     height: 96px;
     position: absolute;
-    top: 492px;
-    left: 173px;
+    top: 78%;
+    left: 12.4%;
     z-index: 3;
+    @media (max-width: $media-tablet) {
+        transform: scale(0.549);
+        top: 74.7%;
+        left: 8.5%;
+    }
+    @media (max-width: $media-mobile) {
+        transform: scale(0.25);
+        top: 290px;
+        right: -3%;
+    }
 }
 
 .animation__man-message {
@@ -321,10 +560,20 @@
     width: 168px;
     height: 86px;
     position: absolute;
-    top: 148px;
-    left: 274px;
+    top: 23.5%;
+    left: 19.5%;
     opacity: 0;
     animation: man-message 2s ease 6s;
+    @media (max-width: $media-tablet) {
+        transform: scale(0.549);
+        top: 26%;
+        left: 16.5%;
+    }
+    @media (max-width: $media-mobile) {
+        transform: scale(0.25);
+        top: 290px;
+        right: -3%;
+    }
 }
 
 @keyframes man-message {
@@ -343,10 +592,20 @@
     width: 168px;
     height: 86px;
     position: absolute;
-    top: 148px;
-    left: 274px;
+    top: 22%;
+    left: 20%;
     opacity: 0;
     animation: man-message-two 2s ease 10s;
+    @media (max-width: $media-tablet) {
+        transform: scale(0.549);
+        top: 24%;
+        left: 16.5%;
+    }
+    @media (max-width: $media-mobile) {
+        transform: scale(0.25);
+        top: 290px;
+        right: -3%;
+    }
 }
 
 @keyframes man-message-two {
@@ -362,11 +621,22 @@
     background: url('../img/animation/man.png');
     background-repeat: no-repeat;
     background-size: cover;
+    z-index: 10;
     width: 205px;
     height: 354px;
     position: absolute;
-    top: 233px;
-    left: 289px;
+    top: 37%;
+    left: 20.5%;
+    @media (max-width: $media-tablet) {
+        transform: scale(0.549);
+        top: 22%;
+        left: 16.5%;
+    }
+    @media (max-width: $media-mobile) {
+        transform: scale(0.25);
+        top: 290px;
+        right: -3%;
+    }
 }
 
 .animation__man-arm {
@@ -376,22 +646,46 @@
     width: 89px;
     height: 129px;
     position: absolute;
-    top: 164px;
-    left: 300px;
-    transform: rotate(150deg);
+    top: 31.5%;
+    left: 20.5%;
+    transform: translate(13px,-22px) rotate(150deg);
     transform-origin: 0 bottom;
     animation: man-arm 2s ease 6s;
+    @media (max-width: $media-tablet) {
+        transform: scale(0.549) translate(8px,-22px) rotate(150deg);
+        animation: man-arm-media-tablet 2s ease 6s;
+        top: 21%;
+        left: 22.8%;
+    }
+    @media (max-width: $media-mobile) {
+        transform: scale(0.25);
+        top: 290px;
+        right: -3%;
+    }
 }
 
 @keyframes man-arm {
     0% {
-        transform: rotate(150deg);
+        transform: translate(13px,-22px) rotate(150deg);
     }
     50% {
         transform: rotate(0deg);
     }
     100% {
-        transform: rotate(150deg);
+        transform: translate(13px,-22px) rotate(150deg);
+        
+    }
+}
+
+@keyframes man-arm-media-tablet {
+    0% {
+        transform: scale(0.549) translate(8px,-22px) rotate(150deg);
+    }
+    50% {
+        transform: scale(0.549) rotate(0deg);
+    }
+    100% {
+        transform: scale(0.549) translate(8px,-22px) rotate(150deg);
         
     }
 }
@@ -403,8 +697,18 @@
     width: 215px;
     height: 563px;
     position: absolute;
-    top: 25px;
-    right: 157px;
+    top: 4%;
+    right: 11.3%;
+    @media (max-width: $media-tablet) {
+        transform: scale(0.549);
+        top: -6%;
+        right: -9%;
+    }
+    @media (max-width: $media-mobile) {
+        transform: scale(0.25);
+        top: 290px;
+        right: -3%;
+    }
 }
 
 @keyframes woman-message {
