--- a/source/scss/blog.scss
+++ b/source/scss/blog.scss
@@ -1,22 +1,49 @@
 .blog {
     margin-top: 60px;
     margin-bottom: 55px;
+    @media (max-width: $media-tablet) {
+        margin-top: 70px;
+        margin-bottom: 50px;
+    }
+    @media (max-width: $media-mobile) {
+        margin-top: 46px;
+    }
     &__title {
-        font-family: 'Montserrat', sant-serif;
+        font-family: 'Montserrat', sans-serif;
         font-style: normal;
         font-weight: 700;
         color: #1E0606; 
         font-size: 40px;
         line-height: 49px;
         margin: 0 auto;
+        @media (max-width: $media-tablet) {
+            font-size: 36px;
+            line-height: 44px;
+        }
+        @media (max-width: $media-mobile) {
+            font-size: 24px;
+            line-height: 29px;
+        }
     }
     &__articles {
         margin-bottom: 47px;
+        @media (max-width: $media-tablet) {
+            margin-bottom: 40px;
+        }
+        @media (max-width: $media-mobile) {
+            margin-bottom: 35px;
+        }
     }
     &__list {
         display: flex;
         flex-wrap: wrap;
         column-gap: 20px;
         row-gap: 34px;
+        @media (max-width: $media-tablet) {
+            row-gap: 20px;
+        }
+        @media (max-width: $media-mobile) {
+            row-gap: 25px;
+        }
     }
 }
