--- a/source/views/blocks/header.html
+++ b/source/views/blocks/header.html
@@ -1,5 +1,3 @@
-<!-- нужно ли в header выносить что то в include? -->
-
 <header class="header container">
     <a href="/" class="header__link header__change">
       <img src="./img/icon/Logo.svg" alt="logo" class="header__logo"></a>
@@ -27,8 +25,9 @@
         })
       </ul>
     </nav>
-    <ul class="header__list header-search">
-      <li class="header__list-item header-search undotted header__change"><a href="#" class="header__list header-link"><img src="./img/icon/search.svg" alt="search" class="header__list header-link-search"></a></li>
-      <li class="header__list-item header-search undotted header__change"><a href="contact.html" class="header__list-search">CONTACT US</a></li>
+    <button class="header__menu">MENU</button>
+    <ul class="header__list">
+      <li class="header__list-item undotted header__change"><a href="#"><img class="header__icon" src="./img/icon/search.svg" alt="search" width="17" height="17"></a></li>
+      <li class="header__list-item undotted header__change"><a href="contact.html" class="header__list-search">CONTACT US</a></li>
     </ul>
 </header>
